@@ -8,7 +8,8 @@ on:
   pull_request:
 
 env:
-  R_VERSION: "4.0"
+  USE_BSPM: "true"
+  _R_CHECK_FORCE_SUGGESTS_: "false"
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,23 +23,16 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a set of commands using the runners shell
+    # Prepare and bootstrap
     - name: Prepare
       run: |
-        sudo apt update
-        sudo apt upgrade
         curl -OLs https://eddelbuettel.github.io/r-travis/run.sh
         chmod 0755 run.sh
+        ./run.sh bootstrap
 
-    # Bootstrap
-    - name: Bootstrap
-      run: ./run.sh bootstrap
-
-    # Runs a set of commands using the runners shell
+    # Install dependencies (with Suggests, use install_deps without)
     - name: Dependencies
-      run: |
-        ./run.sh install_aptget r-cran-jsonlite r-cran-httr
-        ./run.sh install_r whoami
+      run: ./run.sh install_all
 
     # Run test
     - name: Test
